Create User Component

--- a/kakaotalk/friends.html
+++ b/kakaotalk/friends.html
@@ -31,11 +31,21 @@
       </div>
     </header>
 
-    <a id="friend-display-link">
-      <i class="fas fa-info-circle"></i>Friend's Names Display
-      <i class="fas fa-chevron-right"></i>
+    <a id="friends-display-link">
+      <i class="fas fa-info-circle"></i> Friends' Names Display
+      <i class="fas fa-chevron-right fa-xs"></i>
     </a>
 
+    <div class="user-component">
+      <div class="user-component__column">
+        <img src="https://images.unsplash.com/photo-1496483648148-47c686dc86a8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1473&q=80" class="user-component__avatar" />
+        <div class="user-component__text">
+          <h4 class="user-component__title">Zaiing</h4>
+          <h6 class="user-component__subtitle">this text whatever</h6>
+        </div>
+      </div>
+      <div class="user-component__column"></div>
+    </div>
 
     <nav class="nav">
       <ul class="nav__list">
