--- a/kakaotalk/friends.html
+++ b/kakaotalk/friends.html
@@ -60,8 +60,10 @@
             </div>
           </div>
           <div class="user-component__column">
-            <span>2</span>
-            <i class="fas fa-chevron-right fa-xs"></i>
+            <div>
+              <span>2</span>
+              <i class="fas fa-chevron-right fa-xs"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -76,15 +78,15 @@
           <i class="fas fa-user fa-2x"></i>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><span class="nav__notification">1</span></a>
+          <a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span></a>
           <i class="far fa-comment fa-2x"></i>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"></a>
+          <a class="nav__link" href="find.html"></a>
           <i class="fas fa-search fa-2x"></i>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="#"><div class="ellipsis__nav__notification"></div></a>
+          <a class="nav__link" href="more.html"><div class="ellipsis__nav__notification"></div></a>
           <i class="fas fa-ellipsis-h fa-2x"></i>
         </li>
       </ul>
