--- a/kakaotalk/chats.html
+++ b/kakaotalk/chats.html
@@ -33,20 +33,21 @@
     </header>
 
     <main class="main-screen">
-      <div class="user-component">
-        <div class="user-component__column">
-          <img src="https://images.unsplash.com/photo-1496483648148-47c686dc86a8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1473&q=80" class="user-component__avatar user-component__avatar" />
-          <div class="user-component__text">
-            <h4 class="user-component__title">Zaiing</h4>
-            <h6 class="user-component__subtitle">Please check My Kokoa Account info</h6>
+      <a href="chat.html">
+        <div class="user-component">
+          <div class="user-component__column">
+            <img src="https://images.unsplash.com/photo-1496483648148-47c686dc86a8?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1473&q=80" class="user-component__avatar user-component__avatar" />
+            <div class="user-component__text">
+              <h4 class="user-component__title">Zaiing</h4>
+              <h6 class="user-component__subtitle">Please check My Kokoa Account info</h6>
+            </div>
+          </div>
+          <div class="user-component__column">
+              <span class="user-component__time">21:22</span>
+              <div class="badge">1</div>
           </div>
         </div>
-        <div class="user-component__column">
-            <span class="user-component__time">21:22</span>
-            <div class="badge">1</div>
-
-        </div>
-      </div>
+      </a>
     </main>
 
 
