--- a/kakaotalk/friends.html
+++ b/kakaotalk/friends.html
@@ -74,20 +74,20 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"></a>
-          <i class="fas fa-user fa-2x"></i>
+          <a class="nav__link" href="friends.html">
+          <i class="fas fa-user fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span></a>
-          <i class="far fa-comment fa-2x"></i>
+          <a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span>
+          <i class="far fa-comment fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"></a>
-          <i class="fas fa-search fa-2x"></i>
+          <a class="nav__link" href="find.html">
+          <i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html"><div class="ellipsis__nav__notification"></div></a>
-          <i class="fas fa-ellipsis-h fa-2x"></i>
+          <a class="nav__link" href="more.html"><div class="ellipsis__nav__notification"></div>
+          <i class="fas fa-ellipsis-h fa-2x"></i></a>
         </li>
       </ul>
     </nav>
