--- a/kakaotalk/settings.html
+++ b/kakaotalk/settings.html
@@ -24,8 +24,9 @@
 
     <header class="alt-header">
         <div class="alt-header__column">
+          <a href="more.html">
             <i class="fas fa-angle-left fa-2x"></i>
-        </div>
+        </div></a>
         <div class="alt-header__column">
             <h1 class="alt-header__title">Settings</h1>
         </div>
@@ -38,9 +39,7 @@
         <ul class="settings-list">
             <li class="settings__setting">
                 <div class="settings__setting-column">
-                    <a href="more.html">
-                        <i class="fas fa-bullhorn"></i>
-                    </a>
+                      <i class="fas fa-bullhorn"></i>
                     <span>Notices</span>
                 </div>
                 <div class="settings__setting-column"></div>
@@ -67,20 +66,20 @@
     <nav class="nav">
       <ul class="nav__list">
         <li class="nav__btn">
-          <a class="nav__link" href="friends.html"></a>
-          <i class="far fa-user fa-2x"></i>
+          <a class="nav__link" href="friends.html">
+          <i class="far fa-user fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span></a>
-          <i class="far fa-comment fa-2x"></i>
+          <a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span>
+          <i class="far fa-comment fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="find.html"></a>
-          <i class="fas fa-search fa-2x"></i>
+          <a class="nav__link" href="find.html">
+          <i class="fas fa-search fa-2x"></i></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__link" href="more.html"><div class="ellipsis__nav__notification"></div></a>
-          <i class="fas fa-ellipsis-h fa-2x"></i>
+          <a class="nav__link" href="more.html"><div class="ellipsis__nav__notification"></div>
+          <i class="fas fa-ellipsis-h fa-2x"></i></a>
         </li>
       </ul>
     </nav>
