--- a/furniture/scss-masterclass-master/index.html
+++ b/furniture/scss-masterclass-master/index.html
@@ -8,24 +8,33 @@
     <title>(S)CSS Masterclass</title>
   </head>
   <body>
-    <header>
-      <h1>BEST HORROR SCENES</h1>
-      <div class="bottom">
-        <p>
-          <h3>An ever growing collection featuring some of the best scenes in horror.</h3>
-          “Best Horror Scenes” is a collection of scenes I feel are some of the most affecting in horror. Some may be simple black cat scares, others may be more subdued or nuanced. Many come from films that aren't necessarily “horror” but have elements or threads of horror, and all have the same general effect: unease, dread, fear, shock, disgust.
-        </p>
 
-        <nav>
-          <a href="#">Newsletter</a>
-          <a href="#">Suggest a Scene</a>
-          <a href="#">YouTube</a>
-          <a href="#">Twitter</a>
-          <a href="#">Contact</a>
-          <a href="#">RSS</a>
-          <a href="#">Letterboxd</a>
-        </nav>
-      </div>
-  </header>
+    <header>
+      <nav>
+        <ul>
+          <li><i class="fas fa-couch"></i></li>
+          <li><i class="fas fa-bars"></i></li>
+          <li><i class="fas fa-search"></i></li>
+        </ul>
+        <ul>
+          <li>Catalog</li>
+          <li>Concepts</li>
+          <li>Contacts</li>
+        </ul>
+        <ul>
+          <li><i class="far fa-user"></i></li>
+          <li><i class="far fa-heart"></i></li>
+          <li><i class="fas fa-shopping-cart"></i></li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div class="hero"></div>
+    </main>
+
+    <script
+    src="https://kit.fontawesome.com/6478f529f2.js"
+    crossorigin="anonymous"></script>
   </body>
 </html>
